# agentic-sdlc

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  HANDOFF.md  ONBOARDING.md  README.md  architecture.md  claude-code-harness-repos.md  prd.json  progress.txt  pyproject.toml  task.md
.claude/: settings.json
.github/: pull_request_template.md
adw/: __init__.py  github.py  invoke.py  isolation.py  locks.py  orchestrator.py  paths.py  progress.py  runlog.py  safety.py  state.py  status.py  tickets.py  workflow_runner.py  worktrees.py
commands/: DECOMPOSE.md  DOCUMENT.md  IMPLEMENT.md  OBSERVE.md  PLAN.md  PRIME.md  REVIEW.md  TEST.md
configs/: budgets.json  models.json
dashboard/: index.html
docker/: Dockerfile
docs/: using-on-another-repo.md
hooks/: posttooluse_autocommit.py  pretooluse_guard.py  stop_checklist.py
observability/: history.md  test_run1.md  test_run2.md  test_run3.md
plans/: design-system-DESIGN.starter.md  design-system-bootstrap.md  harness_plan.md  hooks_plan.md  improvements.md  observer_plan.md  open_loose_ends.md  parallelization_plan.md  prompts_plan.md  quota_resilience_plan.md  safety_plan.md  tickets_plan.md
prd/: GH-16.json  GH-51.json  GH-53.json  GH-56.json  GH-58.json  GH-59.json  GH-60.json  GH-61.json  GH-62.json  GH-63.json  GH-64.json  GH-87.json  GH-88.json  S-001.json  S-002.json  S-003.json  S-004.json  S-005.json  S-006.json  S-007.json  S-008.json  S-009.json  S-010.json  S-011.json  S-012.json  S-013.json  S-014.json  S-015.json  S-016.json  S-018.json  S-019.json  S-020.json  _meta.json
skills/: README.md
(+63 files in other folders)
